# CLIPlayer

./: .gitignore  CLIPlayer.cpp  CMakeLists.txt  LICENSE  README.md  example.clip
.github/workflows/: ci.yml
